Revision history for Perl extension Sweat

{{$NEXT}}

    - Improved CPAN distribution abstract (Thanks to Toby Inkster for the suggestion)

201912110 2019-12-11T19:38:38Z

    - Changes to Wikipedia mode:
    
        - Avoiding repeating any article during a single workout
        
        - Avoiding articles with certain keywords in the title that suggest primarily non-prose content (e.g. "List of" or "Comparison of")

        - Dropping parentheticals (e.g. birth and death dates, original-language spellings, and IPA pronunciations) from Wikipedia articles' summaries, because they often do not read out loud well.

    - Fixing a bug that would ignore "no-news" in a config file.
    
    - Fixed incorrect docs and sample-config info (Thanks to Tim Vroom)

201909240 2019-09-24T20:55:34Z

    - Adding a "language" config option for setting Wikipedia localization.
    
    - Declining to follow links to Wikipedia articles with numerals in the title, in an effort to avoid boring chains of annual-statistics pages.

    - Configuring the internal MediaWiki::API object to automatically retry a few times if any response from the wiki takes more than a couple of seconds.
    
201909171 2019-09-18T03:00:57Z

    - Making use of File::Which, rather than assuming the presence of a `command` command. (Thanks to Kivanc Yazan for pointing this problem out.)

201909170 2019-09-18T01:05:29Z

    - Adding LWP::Protocol::https as a dependency.

201909090 2019-09-09T21:32:31Z

    - Replacing the LICENSE file with an MIT license, as originally intended

    - Small organizational improvements for CPAN's sake; thanks to Dan Book for the suggestions.

201909080 2019-09-09T20:26:49Z

    - original version
